# oh-sheet

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.dev  LICENSE.txt  Makefile  README.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  eval-baseline.json  eval-results-baseline.json  eval-results-cleanup05.json  eval-results-crepe-045-015.json  eval-results-crepe-sweep.json  eval-results-detector-off-2.json  eval-results-detector-off.json  eval-results-frame025.json  eval-results-merged.json  eval-results-offset-trim.json  eval-results-rhythm-v1.json  eval-results-rhythm-v2-aggr-dur.json  eval-results-rhythm-v3-both-aggr.json  eval-results-rhythm-v4-floor55.json  eval-results-rhythm-v5-no-grid-snap.json  eval-results-rhythm-v6-librosa.json  eval-results-stem-thresh-dedup.json  eval-results-stem-thresh-only.json  eval-results-tuned1.json  golden.mid  marketing-prototype.html  merge_midi_to_piano.py  pyproject.toml  refine-baseline.json
.github/workflows/: branch-guard.yml  ci.yml  deploy-railway.yml  deploy.yml  eval-ci.yml  eval-nightly.yml
.openskills/skill-log-architectural-decisions/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: config.py  contracts.py  main.py
backend/api/: deps.py
backend/eval/: __init__.py  telemetry.py
backend/jobs/: __init__.py  events.py  manager.py  runner.py  youtube_cache.py  youtube_url.py
backend/services/: POP2PIANO_DEPRECATED.md  __init__.py  _torch_utils.py  _ytdlp_utils.py  arrange.py  arrange_simplify.py  assemble.py  audio_preprocess.py  audio_timing.py  bass_extraction.py  chord_recognition.py  condense.py  cover_search.py  crepe_melody.py  duration_refine.py  engrave.py  engrave_local.py  humanize.py  ingest.py  interpret.py  interpret_prompt.py  key_estimation.py  melody_extraction.py  midi_render.py  ml_engraver_client.py  onset_refine.py  pretty_midi_tracks.py  refine.py  refine_prompt.py  score_hpt.py  separate.py  stem_separation.py  transcribe.py  transcribe_amt_apc.py  transcribe_audio.py  transcribe_inference.py  transcribe_kong.py  transcribe_midi.py  transcribe_pipeline_amt_apc.py  transcribe_pipeline_kong.py  (+10 more)
backend/storage/: __init__.py  base.py  local.py
backend/workers/: __init__.py  arrange.py  celery_app.py  condense.py  engrave.py  humanize.py  ingest.py  interpret.py  refine.py  separate.py  transcribe.py  transform.py
docs/: assembler-prd-mvp.md  decomposer-prd-mvp.md  deployment.md  dev-journal.md  engrave-improvement-plan.md  oh-sheet-prd-mvp.md  railway-migration.md  rfc-ml-pipeline-publishing.md  system-design.md
docs/engraver-protocol/: README.md  openapi.yaml
docs/research/: transcription-improvement-implementation-plan.md  transcription-improvement-strategy.md
docs/runbooks/: demo-snapshot-2026-04-20.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: midi-upload.spec.ts  pipeline-e2e.spec.ts
eval/: __init__.py  harness.py  holdout.py  loader.py  tier2_structural.py  tier3_arrangement.py  tier4_perceptual.py  tier_rf.py
eval/baselines/: pop_eval_v1__baseline_5532577.json  pop_mini_v0__main_5532577.json  pop_mini_v0__main_5532577_real.json  pop_mini_v0__main_bde4268.json
eval/pop_eval_v1/: README.md  manifest.yaml
eval/pop_mini_v0/: README.md  manifest.yaml
frontend/: .gitignore  README.md  app.json  package-lock.json  package.json  pubspec.yaml
frontend-v2/: index.html
frontend-v2/assets/: about.html
frontend-v2/src/: api.js  api.test.js  legal.js  legal.test.js  main.js  style.css  views.js  views.test.js
frontend/__tests__/: api.test.ts
frontend/app/: _layout.tsx  index.tsx
frontend/components/: JobCard.tsx  UploadZone.tsx
frontend/lib/: api.ts  config.dart  main.dart  responsive.dart  theme.dart
frontend/test/: main_nav_test.dart  piano_roll_test.dart  progress_screen_test.dart  result_screen_test.dart  theme_test.dart  upload_screen_cover_search_test.dart  upload_screen_hero_test.dart  upload_screen_youtube_test.dart
frontend/web/: index.html
grafana/: README.md
grafana/dashboards/: oh-sheet-eval.json
ohsheet/: __init__.py  config.py  contracts.py  main.py
ohsheet/api/: deps.py
ohsheet/jobs/: __init__.py  manager.py  runner.py
ohsheet/services/: __init__.py  arrange.py  engrave.py  humanize.py  ingest.py  transcribe.py
scripts/: bench_preprocess.py  benchmark_tempo_map.py  compare_eval_runs.py  curate_pop_mini_v0.py  eval.py  eval_mini.py  eval_transcription.py  fma_catalog_filter.py  melody_debug_postprocess.py
shared/: pyproject.toml
shared/shared/: __init__.py  contracts.py  musescore_cli.py
shared/shared/storage/: __init__.py  base.py  local.py
svc-assembler/: Dockerfile  coverage.xml  pyproject.toml
svc-assembler/assembler/: celery_app.py  tasks.py
svc-assembler/tests/: test_tasks.py
svc-decomposer/: Dockerfile  coverage.xml  pyproject.toml
svc-decomposer/decomposer/: celery_app.py  tasks.py
svc-decomposer/tests/: test_tasks.py
test_files/: Rat Dance.mid
tests/: __init__.py  conftest.py  tempo_map_benchmark_metrics.py  test_arrange.py  test_arrange_simplify.py  test_artifacts.py  test_artifacts_refine_trace.py  test_assemble.py  test_audio_preprocess.py  test_audio_timing.py  test_bass_extraction.py  test_beat_snap.py  test_celery_app.py  test_celery_dispatch.py  test_chord_hmm.py  test_chord_recognition.py  test_condense.py  test_contracts_refine.py  test_cover_search.py  test_crepe_hybrid.py  test_crepe_melody.py  test_curate_pop_mini_v0.py  test_decompose.py  test_duration_refine.py  test_engrave_local.py  test_engrave_payload_dispatch.py  test_engrave_pdf_render.py  test_engrave_quality.py  test_eval_harness.py  test_eval_holdout.py  test_eval_loader.py  test_eval_mini.py  test_eval_telemetry.py  test_health.py  test_hf_arrange.py  test_ingest_cover_search.py  test_ingest_youtube.py  test_job_manager.py  test_jobs.py  test_jobs_refine.py  (+41 more)
wireframes/: oh-sheet-wireframes.html
(+85 files in other folders)
