[project]
name = "ohsheet"
version = "0.1.0"
description = "FastAPI backend for the Song-to-Humanized-Piano-Sheet-Music pipeline"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Ross" }]
dependencies = [
    "ohsheet-shared @ file:shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "yt-dlp>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.26",
    "ruff>=0.4",
    "mypy>=1.10",
]
youtube = [
    "yt-dlp>=2024.1",
]
# Basic Pitch transcription baseline. basic-pitch ships the ICASSP-2022
# model weights inside the wheel, so there's no checkpoint to vendor.
#
# Heads-up on the `--no-deps` dance in the Makefile: basic-pitch 0.4.0 has
# `tensorflow-macos>=2.4.1,<2.15.1` as a *base* dependency on Darwin when
# python_version > '3.11', and tensorflow-macos has no wheels for Python
# 3.13. So we install basic-pitch itself with `--no-deps` and pin its
# actual runtime deps here instead. At import time basic-pitch auto-picks
# the first available backend from coreml/tf/tflite/onnx, so with
# coremltools + onnxruntime installed and tensorflow absent it falls
# back to a CoreML or ONNX session without complaint.
#
# Without this extra the TranscribeService falls back to a stub
# TranscriptionResult.
basic-pitch = [
    "coremltools; platform_system == 'Darwin'",
    "librosa>=0.8.0",
    "mir_eval>=0.6.0",
    "numpy>=1.26",
    "onnxruntime>=1.19",
    "pretty_midi>=0.2.10",
    "resampy>=0.2.2,<0.4.3",
    "scikit-learn",
    "scipy>=1.4.1",
    "typing_extensions",
]

[project.scripts]
ohsheet = "backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--cov=backend --cov-report=term-missing --cov-report=xml"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = [
    "UP042",   # StrEnum migration — deferred to avoid runtime changes
    "SIM105",  # contextlib.suppress — style preference
    "SIM108",  # ternary operator — readability call
    "SIM115",  # context manager for tempfiles — not always applicable
    "E731",    # lambda assignment — existing pattern
    "B007",    # unused loop var — existing pattern
    "B905",    # zip strict — existing pattern
]

[tool.mypy]
python_version = "3.11"
packages = ["backend"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backend.services.engrave"
disable_error_code = ["union-attr", "arg-type"]
