[project]
name = "ohsheet"
version = "0.1.0"
description = "FastAPI backend for the Song-to-Humanized-Piano-Sheet-Music pipeline"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Ross" }]
dependencies = [
    "ohsheet-shared @ file:shared",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "yt-dlp>=2024.1",
    "celery[redis]>=5.3",
    "pretty_midi>=0.2.10",
    "music21>=9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.26",
    "ruff>=0.4",
    "mypy>=1.10",
    # Available for MusicXML inspection in tests and scripts.
    "lxml>=5.0",
]
youtube = [
    "yt-dlp>=2024.1",
]
# Root utility: merge_midi_to_piano.py
midi = [
    "mido>=1.3",
]
# Basic Pitch transcription baseline. basic-pitch ships the ICASSP-2022
# model weights inside the wheel, so there's no checkpoint to vendor.
#
# Heads-up on the `--no-deps` dance in the Makefile: basic-pitch 0.4.0 has
# `tensorflow-macos>=2.4.1,<2.15.1` as a *base* dependency on Darwin when
# python_version > '3.11', and tensorflow-macos has no wheels for Python
# 3.13. So we install basic-pitch itself with `--no-deps` and pin its
# actual runtime deps here instead. At import time basic-pitch auto-picks
# the first available backend from coreml/tf/tflite/onnx, so with
# coremltools + onnxruntime installed and tensorflow absent it falls
# back to a CoreML or ONNX session without complaint.
#
# ``mir_eval`` is listed here because basic-pitch 0.4.0 imports it
# unconditionally at module load (``basic_pitch/note_creation.py`` —
# which TranscribeService imports for ``note_events_to_midi``). Without
# it the ``from basic_pitch.note_creation import …`` in transcribe.py
# raises ImportError and the service silently falls back to the 4-note
# stub ("Basic Pitch deps unavailable (No module named 'mir_eval')").
#
# Without this extra the TranscribeService falls back to a stub
# TranscriptionResult.
basic-pitch = [
    "coremltools; platform_system == 'Darwin'",
    "librosa>=0.8.0",
    "mir_eval>=0.6.0",
    "numpy>=1.26",
    "onnxruntime>=1.19",
    "pretty_midi>=0.2.10",
    "resampy>=0.2.2,<0.4.3",
    "scikit-learn",
    "scipy>=1.4.1",
    "typing_extensions",
    # Beat This! (CPJKU, MIT) — transformer beat tracker that emits
    # beats AND downbeats. Replaces madmom in the audio path; downbeats
    # flow onto HarmonicAnalysis.downbeats and surface as MIDI Cue
    # Points in midi_render so the engraver can lock bar lines to the
    # perceived pulse.
    #
    # Pulls in torch as a transitive dependency.
    "beat_this",
]
# Standalone beat-tracker extra so `make install-beat-tracking`
# (and the eval harness) can pull just the beat tracker without the
# full Basic Pitch dependency tree.
beat-tracking = [
    "beat_this",
]
# Offline eval harness (scripts/eval_transcription.py) — scores
# TranscribeService output against clean_midi ground truth via
# mir_eval. mir_eval is also pulled in by [basic-pitch] (basic-pitch
# 0.4.0 imports it at module load), so this extra is effectively a
# subset of [basic-pitch]; kept as a named extra so ``make
# install-eval`` / the README docs still resolve to something
# meaningful for reviewers who only want the scoring library.
eval = [
    "anthropic>=0.40",
    "mir_eval>=0.6.0",
    # Fernet (AES-128-CBC + HMAC-SHA-256) for the encrypted Phase 3
    # holdout manifest (eval/holdout.py). The threat model is "engineer
    # accidentally peeks at holdout while debugging a tune-set
    # regression"; cryptography's Fernet is the standard Python recipe
    # for that. Already a transitive dep of basic-pitch via librosa, so
    # listing it explicitly here just pins the import surface.
    "cryptography>=42",
    # librosa for chroma_cqt / chroma cosine in tier_rf, tier4, tier2.
    # Pulls in soundfile, numpy, scipy as transitive deps.
    "librosa>=0.10",
    # soundfile (libsndfile bindings) for the FluidSynth resynth path in
    # eval/tier_rf.py and the Kong inference helper. Already transitive
    # via librosa but pinned explicitly so the import surface is stable.
    "soundfile>=0.12",
]
# Demucs source separation, used by TranscribeService when
# OHSHEET_DEMUCS_ENABLED=1. Splits the input mix into
# {drums, bass, other, vocals} stems and routes each stem to its
# own Basic Pitch pass / chord-recognition / beat-tracking stage.
#
# License note: the ``demucs`` package itself is MIT, but the
# default ``htdemucs`` pretrained weights (fetched on first use
# from dl.fbaipublicfiles.com) are distributed under CC BY-NC 4.0
# — non-commercial only. Commercial deployments must either train
# their own weights, pick a commercially-licensed pretrained bag,
# or swap in another separator. Stem separation is disabled by
# default so the commercial risk is opt-in.
#
# Without this extra the TranscribeService falls back to the
# single-mix Basic Pitch path regardless of ``demucs_enabled``.
#
# ``torchcrepe`` rides along here because it's gated on the same
# torch install and its only consumer is ``crepe_melody`` running on
# the Demucs vocals stem — shipping it in the ``demucs`` extra keeps
# the two features installable as a single unit, which matches how
# they're used at runtime. Model weights (~22 MB for ``full``) are
# bundled inside the torchcrepe wheel so there's nothing to fetch.
# Pop2Piano audio-to-piano transcription (sweetcocoa/pop2piano).
# Replaces the Demucs + Basic Pitch pipeline with a single transformer
# pass. Requires torch + transformers + essentia (the HF processor is
# gated on essentia at load time).
#
# essentia only publishes x86_64 Linux wheels — Docker services that
# install this extra must build with ``platform: linux/amd64`` (set in
# docker-compose.yml). On Apple Silicon this runs under Rosetta, which
# is transparent but ~10-20% slower for CPU-bound work.
pop2piano = [
    "torch>=2.0",
    "transformers>=4.30",
    "librosa>=0.10",
    "resampy>=0.4",
    "scipy>=1.10",
    "pretty_midi>=0.2.10",
    "essentia==2.1b6.dev1389",
]
demucs = [
    "demucs>=4.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchcrepe>=0.0.22",
]
# AMT-APC piano-cover transcriber (Phase 8). MIT-licensed end-to-end —
# code, weights, and training pipeline. The upstream repo is
# ``misya11p/amt-apc`` (see strategy doc Part III §B6); the package is
# installed directly from GitHub because there is no PyPI release as of
# this writing. Pin a commit before relying on this in production —
# ``main`` is moving — and verify the Transcriber import path matches
# what ``backend/services/transcribe_amt_apc.py`` expects.
#
# Without this extra the dispatcher in ``transcribe.py`` raises
# ImportError when the cover variant fires and falls back to the
# faithful Kong/Basic-Pitch path (no cover-mode rearrangement).
#
# Reuses the ``demucs``/``kong`` torch pin so the three extras coexist.
amt_apc = [
    "amt_apc @ git+https://github.com/misya11p/amt-apc.git",
    "torch>=2.0",
    "librosa>=0.10",
]
# ByteDance Kong piano transcription (Phase 6). MIT-licensed PyPI
# package that wraps the high-resolution piano transcription model
# from "High-resolution Piano Transcription with Pedals by Regressing
# Onset and Offset Times" (Kong et al., 2021). Emits per-note
# onset/offset/velocity AND sustain-pedal CC64 on/off events — pedal
# tracking is the key reason to add this on top of Basic Pitch.
#
# Pin the PyPI package (not GitHub): the upstream repo was archived
# Dec 2025 but the PyPI distribution is still actively maintained.
# Weights (~170 MB CRNN-Regress checkpoint) are fetched lazily from
# Zenodo on first use; pre-cache in the Docker build to dodge cold-
# start latency on Cloud Run. Reuses the demucs extra's torch pin so
# both extras can coexist without conflicting torch versions.
kong = [
    "piano_transcription_inference>=0.0.5",
    "torch>=2.0",
    "librosa>=0.10",
]
# Local engrave stack (Phase 4): music21 → MusicXML + Verovio → SVG +
# LilyPond → PDF. music21 is a top-level dep so the MusicXML half always
# works; this extra adds:
#   * verovio (LGPL — dynamic link via PyPI wheel) for in-process SVG.
#     Never link statically; the wheel is the only legal path.
#   * lilypond is installed at the system level (apt-get on Debian, brew
#     on macOS — see Dockerfile python-base stage). It's GPL and stays
#     isolated to the ``musicxml2ly`` + ``lilypond`` subprocesses; no
#     Python-side data sharing beyond passing the MusicXML file by path.
#
# Without this extra the runner's local engrave succeeds for MusicXML
# but ``musicxml_to_svg`` raises ``EngraveLocalError`` and ``musicxml_to_pdf``
# falls back to the remote HTTP path on any LilyPond binary failure.
engrave = [
    "verovio>=4.0",
]

[project.scripts]
ohsheet = "backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "shared/pyproject.toml:project.version",
    "svc-decomposer/pyproject.toml:project.version",
    "svc-assembler/pyproject.toml:project.version",
]
version_variables = [
    "backend/__init__.py:__version__",
]
commit_message = "chore(release): v{version}"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--cov=backend --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"
markers = [
    "real_transcribe: opt out of the stub TranscribeService fixture and exercise real Basic Pitch inference",
    "real_engrave: opt out of the stub engrave_score_locally fixture and exercise real music21 / LilyPond / Verovio",
    "real_separate: opt out of the stub SeparateService fixture and exercise the real source-separation logic (cache lookup, blob persistence, fallback paths) — does NOT pull in real Demucs",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = [
    "UP042",   # StrEnum migration — deferred to avoid runtime changes
    "SIM105",  # contextlib.suppress — style preference
    "SIM108",  # ternary operator — readability call
    "SIM115",  # context manager for tempfiles — not always applicable
    "E731",    # lambda assignment — existing pattern
    "B007",    # unused loop var — existing pattern
    "B905",    # zip strict — existing pattern
]

[tool.ruff.lint.per-file-ignores]
"backend/contracts.py" = ["F401"]  # names re-exported for `from backend.contracts import …`

[tool.mypy]
python_version = "3.11"
packages = ["backend"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
