[project]
name = "ohsheet-assembler"
version = "0.1.0"
description = "Assembler worker — arrangement stage for Oh Sheet pipeline"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.3",
    "ohsheet-shared @ file:../shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assembler"]

[tool.hatch.metadata]
allow-direct-references = true
